share/cascade/test/regression/type_check/fail/issue_239d.v
genvar i;
always @(posedge clock.val) begin
  case (i) default: $display(1); endcase
end
